add folder names

--- a/mongoDB.ipynb
+++ b/mongoDB.ipynb
@@ -7,17 +7,17 @@
     "#### Import Divvy Bike Data:\n",
     "\n",
     "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202201-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202202-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202203-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202204-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202205-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202206-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202207-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202208-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202209-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202210-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202211-divvy-tripdata.csv<br>\n",
-    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline 202212-divvy-tripdata.csv<br>"
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202202-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202203-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202204-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202205-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202206-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202207-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202208-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202209-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202210-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202211-divvy-tripdata.csv<br>\n",
+    "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline divvy_csv_data/202212-divvy-tripdata.csv<br>"
    ]
   },
   {
