re-organize files

--- a/database_components/divvy_raw_data.ipynb
+++ b/database_components/divvy_raw_data.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
      "output_type": "stream",
      "text": [
       "Mongo Database Name: divvy_db\n",
-      "Mongo Colllection Names: ['divvy_ride_data']\n"
+      "Mongo Collection Names: ['divvy_ride_data']\n"
      ]
     }
    ],
@@ -61,18 +61,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collection: divvy_ride_data, Document Count: 103770\n"
+      "Collection: divvy_ride_data, Document Count: 5667717\n"
      ]
     }
    ],
    "source": [
+    "# Show all the collections with docoment count\n",
     "collection_names = db.list_collection_names()\n",
     "\n",
     "for collection_name in collection_names:\n",
@@ -80,6 +81,13 @@
     "    document_count = collection.count_documents({})\n",
     "    print(f'Collection: {collection_name}, Document Count: {document_count}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
