convert mm to in

--- a/database_components/weather_raw_data.ipynb
+++ b/database_components/weather_raw_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -149,20 +149,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a weather dataframe\n",
+    "# Convert precipitation from mm to in\n",
     "weather_df = pd.DataFrame(weather_dict)\n",
     "\n",
+    "# Define the conversion factor\n",
+    "mm_to_in = 0.0393701\n",
+    "\n",
+    "# Convert the \"precipitation\" column from mm to in\n",
+    "weather_df[\"precipitation\"] = weather_df[\"precipitation\"] * mm_to_in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Export our weather dataframe to a csv file\n",
     "weather_df.to_csv(\"csv_data/weather/weather_daily.csv\", index=False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +216,7 @@
        "      <th>0</th>\n",
        "      <td>2022-01-01</td>\n",
        "      <td>90.0</td>\n",
-       "      <td>0.18</td>\n",
+       "      <td>0.007087</td>\n",
        "      <td>33.22</td>\n",
        "      <td>42.10</td>\n",
        "      <td>42.10</td>\n",
@@ -216,7 +229,7 @@
        "      <th>1</th>\n",
        "      <td>2022-01-02</td>\n",
        "      <td>90.0</td>\n",
-       "      <td>13.81</td>\n",
+       "      <td>0.543701</td>\n",
        "      <td>18.81</td>\n",
        "      <td>32.77</td>\n",
        "      <td>28.24</td>\n",
@@ -229,7 +242,7 @@
        "      <th>2</th>\n",
        "      <td>2022-01-03</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>6.58</td>\n",
        "      <td>26.37</td>\n",
        "      <td>21.76</td>\n",
@@ -242,7 +255,7 @@
        "      <th>3</th>\n",
        "      <td>2022-01-04</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>18.03</td>\n",
        "      <td>30.36</td>\n",
        "      <td>18.03</td>\n",
@@ -255,7 +268,7 @@
        "      <th>4</th>\n",
        "      <td>2022-01-05</td>\n",
        "      <td>64.0</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>0.009843</td>\n",
        "      <td>13.57</td>\n",
        "      <td>33.39</td>\n",
        "      <td>31.53</td>\n",
@@ -270,11 +283,11 @@
       ],
       "text/plain": [
        "         date  cloud_cover  precipitation  min_temp  max_temp  morning_temp  \\\n",
-       "0  2022-01-01         90.0           0.18     33.22     42.10         42.10   \n",
-       "1  2022-01-02         90.0          13.81     18.81     32.77         28.24   \n",
-       "2  2022-01-03         16.0           0.00      6.58     26.37         21.76   \n",
-       "3  2022-01-04          4.0           0.00     18.03     30.36         18.03   \n",
-       "4  2022-01-05         64.0           0.25     13.57     33.39         31.53   \n",
+       "0  2022-01-01         90.0       0.007087     33.22     42.10         42.10   \n",
+       "1  2022-01-02         90.0       0.543701     18.81     32.77         28.24   \n",
+       "2  2022-01-03         16.0       0.000000      6.58     26.37         21.76   \n",
+       "3  2022-01-04          4.0       0.000000     18.03     30.36         18.03   \n",
+       "4  2022-01-05         64.0       0.009843     13.57     33.39         31.53   \n",
        "\n",
        "   afternoon_temp  evening_temp  night_temp  max_windspeed  \n",
        "0           38.43         35.24       38.44          15.01  \n",
@@ -284,7 +297,7 @@
        "4           32.74         22.19       31.64          17.00  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
