updated weather raw data

--- a/database_components/divvy_raw_data.ipynb
+++ b/database_components/divvy_raw_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import Divvy Bike Data:\n",
+    "#### Create Divvy Bike Collection:\n",
     "\n",
     "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline csv_data/divvy_rides/202201-divvy-tripdata.csv<br>\n",
     "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline csv_data/divvy_rides/202202-divvy-tripdata.csv<br>\n",
@@ -22,41 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymongo\n",
-    "from pymongo import MongoClient, UpdateOne\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mongo Database Name: divvy_db\n",
-      "Mongo Collection Names: ['divvy_ride_data']\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create an instance of MongoClient\n",
-    "mongo = MongoClient(port=27017)\n",
-    "\n",
-    "# Assign the database variable\n",
-    "db = mongo.divvy_db\n",
-    "\n",
-    "# Assign the colloections variable\n",
-    "divvy_rides = db['divvy_ridedata']\n",
-    "\n",
-    "print(f'Mongo Database Name: {db.name}')\n",
-    "print(f'Mongo Collection Names: {db.list_collection_names()}')"
+    "from pymongo import MongoClient"
    ]
   },
   {
@@ -68,26 +38,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collection: divvy_ride_data, Document Count: 5667717\n"
+      "Collection Name: divvy_ride_data\n",
+      "Count of Documents: 5667717\n"
      ]
     }
    ],
    "source": [
-    "# Show all the collections with docoment count\n",
-    "collection_names = db.list_collection_names()\n",
+    "# Create an instance of MongoClient and specify the database name\n",
+    "mongo = MongoClient(port=27017)\n",
+    "db = mongo.divvy_db\n",
     "\n",
-    "for collection_name in collection_names:\n",
-    "    collection = db[collection_name]\n",
-    "    document_count = collection.count_documents({})\n",
-    "    print(f'Collection: {collection_name}, Document Count: {document_count}')"
+    "# Specify the name of the collection you want to work with\n",
+    "collection_name = \"divvy_ride_data\"\n",
+    "\n",
+    "# Access the collection directly\n",
+    "collection = db[collection_name]\n",
+    "\n",
+    "# Count the number of documents in the collection\n",
+    "document_count = collection.count_documents({})\n",
+    "\n",
+    "# Print the collection name and the document count\n",
+    "print(f\"Collection Name: {collection_name}\")\n",
+    "print(f\"Count of Documents: {document_count}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
