--- a/database_components/weather_raw_data.ipynb
+++ b/database_components/weather_raw_data.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import dependencies\n",
     "import pandas as pd\n",
     "import json\n",
     "import requests\n",
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,12 +159,18 @@
     "mm_to_in = 0.0393701\n",
     "\n",
     "# Convert the \"precipitation\" column from mm to in\n",
-    "weather_df[\"precipitation\"] = weather_df[\"precipitation\"] * mm_to_in"
+    "weather_df[\"precipitation\"] = weather_df[\"precipitation\"] * mm_to_in\n",
+    "\n",
+    "# Define the threshold value for significant precipitation comparison \n",
+    "threshold = 0.1\n",
+    "\n",
+    "# Create the new boolean precipitation column\n",
+    "weather_df['significant_precipitation'] = weather_df['precipitation'] > threshold"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -209,6 +214,7 @@
        "      <th>evening_temp</th>\n",
        "      <th>night_temp</th>\n",
        "      <th>max_windspeed</th>\n",
+       "      <th>significant_precipitation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -224,6 +230,7 @@
        "      <td>35.24</td>\n",
        "      <td>38.44</td>\n",
        "      <td>15.01</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -237,6 +244,7 @@
        "      <td>19.63</td>\n",
        "      <td>32.77</td>\n",
        "      <td>18.41</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -250,6 +258,7 @@
        "      <td>7.21</td>\n",
        "      <td>24.21</td>\n",
        "      <td>8.99</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -263,6 +272,7 @@
        "      <td>21.29</td>\n",
        "      <td>19.26</td>\n",
        "      <td>10.00</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -276,6 +286,7 @@
        "      <td>22.19</td>\n",
        "      <td>31.64</td>\n",
        "      <td>17.00</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -289,15 +300,22 @@
        "3  2022-01-04          4.0       0.000000     18.03     30.36         18.03   \n",
        "4  2022-01-05         64.0       0.009843     13.57     33.39         31.53   \n",
        "\n",
-       "   afternoon_temp  evening_temp  night_temp  max_windspeed  \n",
-       "0           38.43         35.24       38.44          15.01  \n",
-       "1           26.64         19.63       32.77          18.41  \n",
-       "2           12.25          7.21       24.21           8.99  \n",
-       "3           20.97         21.29       19.26          10.00  \n",
-       "4           32.74         22.19       31.64          17.00  "
+       "   afternoon_temp  evening_temp  night_temp  max_windspeed  \\\n",
+       "0           38.43         35.24       38.44          15.01   \n",
+       "1           26.64         19.63       32.77          18.41   \n",
+       "2           12.25          7.21       24.21           8.99   \n",
+       "3           20.97         21.29       19.26          10.00   \n",
+       "4           32.74         22.19       31.64          17.00   \n",
+       "\n",
+       "   significant_precipitation  \n",
+       "0                      False  \n",
+       "1                       True  \n",
+       "2                      False  \n",
+       "3                      False  \n",
+       "4                      False  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,6 +324,47 @@
     "csv_file_path = 'csv_data/weather/weather_daily.csv'\n",
     "weather_df = pd.read_csv(csv_file_path)\n",
     "weather_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create Weather Data Collection:\n",
+    "mongoimport --type csv -d divvy_db -c weather_daily --headerline csv_data/weather/weather_daily.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collection Name: weather_daily\n",
+      "Count of Documents: 365\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an instance of MongoClient and specify the database name\n",
+    "mongo = MongoClient(port=27017)\n",
+    "db = mongo.divvy_db\n",
+    "\n",
+    "# Specify the name of the collection you want to work with\n",
+    "collection_name = \"weather_daily\"\n",
+    "\n",
+    "# Access the collection directly\n",
+    "collection = db[collection_name]\n",
+    "\n",
+    "# Count the number of documents in the collection\n",
+    "document_count = collection.count_documents({})\n",
+    "\n",
+    "# Print the collection name and the document count\n",
+    "print(f\"Collection Name: {collection_name}\")\n",
+    "print(f\"Count of Documents: {document_count}\")"
    ]
   }
  ],
