added neighboorhood data

--- a/database_components/divvy_raw_data.ipynb
+++ b/database_components/divvy_raw_data.ipynb
@@ -31,19 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pymongo\n",
     "from pymongo import MongoClient\n",
-    "from pprint import pprint\n",
-    "from multiprocessing import Pool"
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
