--- a/database_components/location_raw_data.ipynb
+++ b/database_components/location_raw_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.command_cursor.CommandCursor at 0x11f741210>"
+       "<pymongo.command_cursor.CommandCursor at 0x123110f40>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,46 +104,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collection Name: station_names\n",
-      "Count of Documents: 1674\n",
-      "{'_id': '10101 S Stony Island Ave',\n",
-      " 'lat': 41.71,\n",
-      " 'lng': -87.58,\n",
-      " 'station_name': '10101 S Stony Island Ave'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Access the collection directly\n",
-    "station_names = db['station_names']\n",
-    "\n",
-    "# Count the number of documents in the collection\n",
-    "document_count = station_names.count_documents({})\n",
-    "\n",
-    "# Print the collection name and the document count\n",
-    "print(f\"Collection Name: {station_names.name}\")\n",
-    "print(f\"Count of Documents: {document_count}\")\n",
-    "\n",
-    "document = station_names.find_one()\n",
-    "pprint(document)"
+    "station_names = db['station_names']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Chicago Neighborhoods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "station_names.update_many({}, {\"$set\": {\"neighborhood\": None}})\n",
-    "\n",
-    "\n",
     "# Load the GeoJSON file containing Chicago neighborhoods\n",
     "neighborhoods = gpd.read_file(\"location_data/chicago_neighborhoods.geojson\")\n",
     "\n",
@@ -158,12 +138,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "station_names = db['station_names']\n",
-    "\n",
     "for station in station_names.find():\n",
     "        lon = station.get('lng')\n",
     "        lat = station.get('lat')\n",
@@ -179,23 +157,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Chicago Wards"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the GeoJSON file containing Chicago neighborhoods\n",
+    "wards = gpd.read_file(\"location_data/chicago_wards.geojson\")\n",
+    "\n",
+    "# Define a function to find the neighborhood for a given longitude and latitude\n",
+    "def find_ward(lon, lat):\n",
+    "    point = [lon, lat]\n",
+    "    for index, row in wards.iterrows():\n",
+    "        if row['geometry'].contains(gpd.points_from_xy([lon], [lat])[0]):\n",
+    "            return row['ward']\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for station in station_names.find():\n",
+    "        lon = station.get('lng')\n",
+    "        lat = station.get('lat')\n",
+    "\n",
+    "        # Calculate the new neighborhood\n",
+    "        new_ward = find_ward(lon, lat)\n",
+    "\n",
+    "        # Update the document with the new neighborhood information\n",
+    "        station_names.update_one(\n",
+    "            {\"_id\": station[\"_id\"]},\n",
+    "            {\"$set\": {\"ward\": new_ward}}\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Chicago Community Areas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the GeoJSON file containing Chicago neighborhoods\n",
+    "community_area = gpd.read_file(\"location_data/chicago_community_area.geojson\")\n",
+    "\n",
+    "# Define a function to find the neighborhood for a given longitude and latitude\n",
+    "def find_community_area(lon, lat):\n",
+    "    point = [lon, lat]\n",
+    "    for index, row in community_area.iterrows():\n",
+    "        if row['geometry'].contains(gpd.points_from_xy([lon], [lat])[0]):\n",
+    "            return row['community']\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for station in station_names.find():\n",
+    "        lon = station.get('lng')\n",
+    "        lat = station.get('lat')\n",
+    "\n",
+    "        # Calculate the new neighborhood\n",
+    "        new_community_area = find_community_area(lon, lat)\n",
+    "\n",
+    "        # Update the document with the new neighborhood information\n",
+    "        station_names.update_one(\n",
+    "            {\"_id\": station[\"_id\"]},\n",
+    "            {\"$set\": {\"community_area\": new_community_area}}\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summarize station_names collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Collection Name: station_names\n",
+      "Count of Documents: 1674\n",
       "{'_id': '10101 S Stony Island Ave',\n",
+      " 'community_area': 'SOUTH DEERING',\n",
       " 'lat': 41.71,\n",
       " 'lng': -87.58,\n",
       " 'neighborhood': 'South Deering',\n",
-      " 'station_name': '10101 S Stony Island Ave'}\n"
+      " 'station_name': '10101 S Stony Island Ave',\n",
+      " 'ward': '10'}\n"
      ]
     }
    ],
    "source": [
+    "# Access the collection directly\n",
+    "station_names = db['station_names']\n",
+    "\n",
+    "# Count the number of documents in the collection\n",
+    "document_count = station_names.count_documents({})\n",
+    "\n",
+    "# Print the collection name and the document count\n",
+    "print(f\"Collection Name: {station_names.name}\")\n",
+    "print(f\"Count of Documents: {document_count}\")\n",
+    "\n",
     "document = station_names.find_one()\n",
     "pprint(document)"
    ]
