created city field and summarized notebooks

--- a/database_components/divvy_raw_data.ipynb
+++ b/database_components/divvy_raw_data.ipynb
@@ -4,6 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Divvy Raw Data\n",
+    "\n",
+    "Created the divvy_rides collection. This collection includes the ride data for each Divvy ride in 2022, which equates to ~5.5 million documents\n",
+    "\n",
+    "#### Steps Taken\n",
+    "\n",
+    "1. Used mongoimport to import all the Divvy bike ride data from 2022 into a collection named divvy_rides\n",
+    "    - Ride data is available at https://divvybikes.com/system-data\n",
+    "2. Created a new \"started_at_date\", \"started_at_time\", \"ended_at_date\", \"ended_at_time\" field in the divvy_rides collection\n",
+    "    - Used the \"started_at\" datetime field to create the new \"started_at_date\" and \"started_at_time\" field\n",
+    "    - Used the \"ended_at\" datetime field to create the new \"ended_at_date\" and \"ended_at_time\" field"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Create Divvy Bike Collection:\n",
     "\n",
     "mongoimport --type csv -d divvy_db -c divvy_ride_data --headerline csv_data/divvy_rides/202201-divvy-tripdata.csv<br>\n",
