--- a/database_components/location_raw_data.ipynb
+++ b/database_components/location_raw_data.ipynb
@@ -1,8 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Location Raw Data\n",
+    "\n",
+    "Created the station_names collection. This collection includes the city, ward, community area, and neighboorhood of each bike station. It also includes the ride count of each station for 2022\n",
+    "\n",
+    "#### Steps Taken\n",
+    "\n",
+    "1. Created a new station_names collection using the divvy_ride_data collection\n",
+    "    - Aggregation pipeline to find unique start stations by \"start_station_name\"\n",
+    "    - Excluded blank start station names\n",
+    "    - Get the first \"start_lat\" and \"start_lng\" for each start station\n",
+    "    - Calculate the ride count per start station\n",
+    "2. Load the GeoJSON files\n",
+    "3. Define a function to find the city for a given longitude and latitude\n",
+    "4. Used a for loop to update the station_names collection to include the city of each station\n",
+    "5. Repeat steps 2 through 4 for the neighborhood, ward, and community area"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -45,16 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.command_cursor.CommandCursor at 0x123110f40>"
+       "<pymongo.command_cursor.CommandCursor at 0x1265bf520>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,6 +109,7 @@
     "            \"station_name\": {\"$first\": \"$start_station_name\"},  # Rename the field\n",
     "            \"lat\": {\"$first\": \"$start_lat\"},  # Get the first \"start_lat\" in each group\n",
     "            \"lng\": {\"$first\": \"$start_lng\"},  # Get the first \"start_lng\" in each group\n",
+    "            \"ride_count\": {\"$sum\": 1}  # Count the number of rides in each group\n",
     "        }\n",
     "    },\n",
     "    {\n",
@@ -104,11 +126,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "station_names = db['station_names']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Chicago City"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the GeoJSON file containing Chicago neighborhoods\n",
+    "city = gpd.read_file(\"location_data/chicago_city.geojson\")\n",
+    "\n",
+    "# Define a function to find the neighborhood for a given longitude and latitude\n",
+    "def find_city(lon, lat):\n",
+    "    point = [lon, lat]\n",
+    "    for index, row in city.iterrows():\n",
+    "        if row['geometry'].contains(gpd.points_from_xy([lon], [lat])[0]):\n",
+    "            return row['name']\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for station in station_names.find():\n",
+    "        lon = station.get('lng')\n",
+    "        lat = station.get('lat')\n",
+    "\n",
+    "        # Calculate the new neighborhood\n",
+    "        new_city = find_city(lon, lat)\n",
+    "\n",
+    "        # Update the document with the new neighborhood information\n",
+    "        station_names.update_one(\n",
+    "            {\"_id\": station[\"_id\"]},\n",
+    "            {\"$set\": {\"city\": new_city}}\n",
+    "        )"
    ]
   },
   {
@@ -120,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -264,13 +331,15 @@
      "text": [
       "Collection Name: station_names\n",
       "Count of Documents: 1674\n",
-      "{'_id': '10101 S Stony Island Ave',\n",
-      " 'community_area': 'SOUTH DEERING',\n",
-      " 'lat': 41.71,\n",
-      " 'lng': -87.58,\n",
-      " 'neighborhood': 'South Deering',\n",
-      " 'station_name': '10101 S Stony Island Ave',\n",
-      " 'ward': '10'}\n"
+      "{'_id': 'Clark St & Armitage Ave',\n",
+      " 'city': 'CHICAGO',\n",
+      " 'community_area': 'LINCOLN PARK',\n",
+      " 'lat': 41.918306,\n",
+      " 'lng': -87.636282,\n",
+      " 'neighborhood': 'Old Town',\n",
+      " 'ride_count': 29051,\n",
+      " 'station_name': 'Clark St & Armitage Ave',\n",
+      " 'ward': '43'}\n"
      ]
     }
    ],
