--- a/database_components/weather_raw_data.ipynb
+++ b/database_components/weather_raw_data.ipynb
@@ -1,6 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Weather Raw Data\n",
+    "\n",
+    "Created the weather_daily collection. This collection includes a daily summary of the weather in Chicago in 2022\n",
+    "\n",
+    "#### Steps Taken\n",
+    "\n",
+    "1. Used the Open Weather api for the daily weather summary\n",
+    "    - https://openweathermap.org/api/one-call-3#history_daily_aggregation\n",
+    "2. Defined the location and date range of the weather data needed\n",
+    "    - Location = Chicago\n",
+    "    - Date Range = 2022\n",
+    "3. Used a for loop to retrieve Open Weather data for all dates in the date list\n",
+    "4. Created a dictionary named weather_dict with the weather data\n",
+    "5. Created a dataframe of the weather_dict\n",
+    "    - Convert precipitation from mm to in\n",
+    "    - Create the new boolean precipitation column\n",
+    "6. Export our weather dataframe to a csv file\n",
+    "7. Used mongoimport to create the weather data collection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
