--- a/flask_app/sandbox.ipynb
+++ b/flask_app/sandbox.ipynb
@@ -16,33 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_geojson_file(file_path):\n",
-    "    try:\n",
-    "        with open(file_path, \"r\") as geojson_file:\n",
-    "            geojson_data = json.load(geojson_file)\n",
-    "        return geojson_data\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error reading GeoJSON file: {str(e)}\")\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geojson_file_path = \"../database_components/location_data/chicago_community_area.geojson\"\n",
-    "community_area_boundary_geojson = read_geojson_file(geojson_file_path)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +29,19 @@
     }
    ],
    "source": [
+    "def read_geojson_file(file_path):\n",
+    "    try:\n",
+    "        with open(file_path, \"r\") as geojson_file:\n",
+    "            geojson_data = json.load(geojson_file)\n",
+    "        return geojson_data\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error reading GeoJSON file: {str(e)}\")\n",
+    "        return None\n",
+    "\n",
+    "# Specify the path to your GeoJSON file\n",
+    "geojson_file_path = \"../database_components/location_data/chicago_community_area.geojson\"\n",
+    "community_area_boundary_geojson = read_geojson_file(geojson_file_path)\n",
+    "\n",
     "if community_area_boundary_geojson and \"features\" in community_area_boundary_geojson:\n",
     "    first_feature = community_area_boundary_geojson[\"features\"][0]\n",
     "    print(\"First Feature:\")\n",
