--- a/database_components/weather_raw_data.ipynb
+++ b/database_components/weather_raw_data.ipynb
@@ -378,7 +378,7 @@
     "db = mongo.divvy_db\n",
     "\n",
     "# Specify the name of the collection you want to work with\n",
-    "collection_name = \"weather_daily\"\n",
+    "collection = db[collection_name]\n",
     "\n",
     "# Access the collection directly\n",
     "collection = db[collection_name]\n",
