--- a/database_components/queries.ipynb
+++ b/database_components/queries.ipynb
@@ -72,6 +72,174 @@
     "\n",
     "print(\"Aggregation result has been written to the new collection.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aggregation by season result has been written to the new collection.\n"
+     ]
+    }
+   ],
+   "source": [
+    "divvy_rides_by_month = divvy_db[\"divvy_rides_by_month\"]\n",
+    "\n",
+    "# Define the aggregation pipeline\n",
+    "pipeline = [\n",
+    "    {\n",
+    "        \"$group\": {\n",
+    "            \"_id\": {\n",
+    "                \"year\": \"$year\",\n",
+    "                \"season\": {\n",
+    "                    \"$switch\": {\n",
+    "                        \"branches\": [\n",
+    "                            {\"case\": {\"$in\": [\"$month\", [3, 4, 5]]}, \"then\": \"Spring\"},\n",
+    "                            {\"case\": {\"$in\": [\"$month\", [6, 7, 8]]}, \"then\": \"Summer\"},\n",
+    "                            {\"case\": {\"$in\": [\"$month\", [9, 10, 11]]}, \"then\": \"Autumn\"},\n",
+    "                            {\"case\": {\"$in\": [\"$month\", [12, 1, 2]]}, \"then\": \"Winter\"}\n",
+    "                        ],\n",
+    "                        \"default\": \"Unknown\"\n",
+    "                    }\n",
+    "                }\n",
+    "            },\n",
+    "            \"total_rides\": {\"$sum\": \"$total_rides\"}\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$sort\": {\"_id.year\": 1, \"_id.season\": 1}\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Execute the aggregation pipeline\n",
+    "divvy_rides_by_season = divvy_db[\"divvy_rides_by_season\"]\n",
+    "divvy_rides_by_season.drop()  # Drop the collection\n",
+    "aggregated_result = list(divvy_rides_by_month.aggregate(pipeline, allowDiskUse=True, collation=None))\n",
+    "\n",
+    "# Insert the aggregated documents into the new collection\n",
+    "for doc in aggregated_result:\n",
+    "    divvy_rides_by_season.insert_one(doc)\n",
+    "\n",
+    "print(\"Aggregation by season result has been written to the new collection.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aggregation result has been written to the new collection.\n"
+     ]
+    }
+   ],
+   "source": [
+    "divvy_ride_data = divvy_db[\"divvy_ride_data\"]\n",
+    "\n",
+    "pipeline = [\n",
+    "    {\n",
+    "        \"$group\": {\n",
+    "            \"_id\": {\n",
+    "                \"date\": \"$started_at_date\",  # Group by the date\n",
+    "            },\n",
+    "            \"total_rides\": {\"$sum\": 1}  # Calculate the total rides for each date\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"_id\": 0,  # Exclude the _id field\n",
+    "            \"date\": \"$_id.date\",\n",
+    "            \"total_rides\": 1  # Include the total_rides field\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$sort\": {\n",
+    "            \"date\": 1  # Sort by date in ascending order\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Execute the aggregation pipeline and write to a new collection\n",
+    "divvy_rides_by_day = divvy_db[\"divvy_rides_by_day\"]\n",
+    "divvy_rides_by_day.drop()  # Drop the collection if it exists\n",
+    "aggregated_result = divvy_ride_data.aggregate(pipeline, allowDiskUse=True, collation=None)\n",
+    "\n",
+    "for doc in aggregated_result:\n",
+    "    divvy_rides_by_day.insert_one(doc)\n",
+    "\n",
+    "print(\"Aggregation result has been written to the new collection.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merged data has been created in the 'divvy_rides_and_weather' collection.\n"
+     ]
+    }
+   ],
+   "source": [
+    "divvy_rides_by_day = divvy_db[\"divvy_rides_by_day\"]\n",
+    "weather_daily = divvy_db[\"weather_daily\"]\n",
+    "\n",
+    "pipeline = [\n",
+    "    {\n",
+    "        \"$lookup\": {\n",
+    "            \"from\": \"weather_daily\",\n",
+    "            \"localField\": \"date\",\n",
+    "            \"foreignField\": \"date\",\n",
+    "            \"as\": \"weather\"\n",
+    "        }\n",
+    "    },\n",
+    "    {\n",
+    "        \"$unwind\": \"$weather\"  # Unwind the \"weather\" array created by the $lookup\n",
+    "    },\n",
+    "    {\n",
+    "        \"$project\": {\n",
+    "            \"_id\": 0,  # Exclude the _id field\n",
+    "            \"date\": 1,\n",
+    "            \"total_rides\": 1,\n",
+    "            \"cloud_cover\": \"$weather.cloud_cover\",\n",
+    "            \"precipitation\": \"$weather.precipitation\",\n",
+    "            \"min_temp\": \"$weather.min_temp\",\n",
+    "            \"max_temp\": \"$weather.max_temp\",\n",
+    "            \"morning_temp\": \"$weather.morning_temp\",\n",
+    "            \"afternoon_temp\": \"$weather.afternoon_temp\",\n",
+    "            \"evening_temp\": \"$weather.evening_temp\",\n",
+    "            \"night_temp\": \"$weather.night_temp\",\n",
+    "            \"max_windspeed\": \"$weather.max_windspeed\",\n",
+    "            \"significant_precipitation\": \"$weather.significant_precipitation\"\n",
+    "        }\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# Create a new collection to store the merged data\n",
+    "divvy_rides_and_weather = divvy_db[\"divvy_rides_and_weather\"]\n",
+    "\n",
+    "# Drop the collection if it already exists\n",
+    "divvy_rides_and_weather.drop()\n",
+    "\n",
+    "# Execute the aggregation pipeline and insert the results into the new collection\n",
+    "results = divvy_db.divvy_rides_by_day.aggregate(pipeline)\n",
+    "\n",
+    "# Insert each result document into the new collection\n",
+    "for result in results:\n",
+    "    divvy_rides_and_weather.insert_one(result)\n",
+    "\n",
+    "print(\"Merged data has been created in the 'divvy_rides_and_weather' collection.\")"
+   ]
   }
  ],
  "metadata": {
